feat: crops and seasons crud
