# src/modules/crop/dto/update-crop.dto.ts
@@ -1,0 +1,9 @@
+import { IsOptional, IsString } from 'class-validator';
+import { ApiPropertyOptional } from '@nestjs/swagger';
+
+export class UpdateCropDto {
+  @ApiPropertyOptional({ example: 'Soybean', description: 'Name of the crop' })
+  @IsOptional()
+  @IsString()
+  name?: string;
+}
